# echojay-vst

./: .gitignore  CMakeLists.txt  README.md  build-installer.sh  package-dmg.sh
.github/.github/workflows/: build.yml
.github/workflows/: build-windows.yml  build.yml
Source/: EchoJayAPI.cpp  EchoJayAPI.h  EchoJayLookAndFeel.h  MeterEngine.cpp  MeterEngine.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  PluginScanner.cpp  PluginScanner.h  ReferenceAnalyser.cpp  ReferenceAnalyser.h  WaveformRecorder.cpp  WaveformRecorder.h
installer/: conclusion.html  license.html  welcome.html
